--- a/index.html
+++ b/index.html
@@ -550,16 +550,154 @@
             <a class="btn btn-outline" href="#contact">Contact</a>
         </nav>
     </header>
-
     <!-- Hero / Back to school -->
-    <!-- unchanged ... -->
+    <section id="hero" class="hero" aria-label="Back to school hero">
+        <div class="hero-text fade-in" style="animation-delay:.1s;">
+            <div class="pill">Back to School 2025 🎒✏️ <img src="Yellow Sketch Back To School Facebook Cover.png"
+                    alt="Back to school icon" class="inline-icon" /></div>
+            <h2>Welcome to <span class="highlighted">Catherine the Great Academy</span> <img src="cad.jpeg"
+                    alt="Academy emblem" class="inline-icon" /></h2>
+            <p>From Kindergarten to Grade 12: High-quality education, inclusive scholarships, and modern facilities.
+                First-position students, recent achievers, and those with disabilities or financial challenges
+                receive special discounts and support. Apply now via our easy scholarship form below. 💡📚 <img
+                    src="scholar.jpeg" alt="Scholarship badge" class="inline-icon" /></p>
+            <div style="margin-top:1rem;display:flex;gap:12px;flex-wrap:wrap;">
+                <a href="#admissions" class="btn btn-primary">Admissions Open 🎓</a>
+                <a href="#scholarships" class="btn btn-outline">Apply for Scholarship 📝</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Online Courses -->
+    <section id="online-courses" style="margin-top:3rem;">
+        <div class="section-title">
+            <div>
+                <h3>Our Online Courses 🌐 <img src="onlinecourse.jpeg" alt="Online learning" class="inline-icon" />
+                </h3><span class="badge">Learn Anywhere</span>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="card fade-in" style="animation-delay:.2s;">
+                <div class="placeholder-img">Replace with online course image</div>
+                <h4>STEM Foundations <img src="steam.jpeg" alt="STEM icon" class="inline-icon" /></h4>
+                <p>Interactive lessons in math, science, and coding. Accessible to all grade levels, with progress
+                    tracking. 🔬💻.</p>
+                <div><span class="pill-small">Self-paced</span> <span class="pill-small">Certified</span></div>
+            </div>
+            <div class="card fade-in" style="animation-delay:.3s;">
+                <div class="placeholder-img">Replace with online course image</div>
+                <h4>Language Arts & Writing <img src="art.jpeg" alt="Writing icon" class="inline-icon" /></h4>
+                <p>Build English proficiency, critical thinking, and creative writing through guided modules and
+                    mentorship. ✍️📖</p>
+                <div><span class="pill-small">Live Feedback</span> <span class="pill-small">Portfolio</span></div>
+            </div>
+            <div class="card fade-in" style="animation-delay:.4s;">
+                <div class="placeholder-img">Replace with online course image</div>
+                <h4>Digital Literacy <img src="digital.jpeg" alt="Digital literacy" class="inline-icon" /></h4>
+                <p>From basic computer skills to web design and responsible online citizenship. 🌍🖥️</p>
+                <div><span class="pill-small">Project-based</span> <span class="pill-small">Future-ready</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Admissions -->
+    <section id="admissions" style="margin-top:3rem;">
+        <div class="section-title">
+            <div>
+                <h3>Admissions Are Open 🏫 <img src="Blue and White Modern School Admissions Poster.png"
+                        alt="Admissions" class="inline-icon" /></h3><span class="badge">Apply Now</span>
+            </div>
+        </div>
+        <div class="split">
+            <div class="bg-card fade-in" style="animation-delay:.2s;">
+                <h4>Grades Offered <img src="gradesoffered.jpeg" alt="Grades offered" class="inline-icon" /></h4>
+                <p>Kindergarten through Grade 12 with a curriculum focused on academic excellence, inclusivity, and
+                    character development.</p>
+                <div class="features">
+                    <div class="feature">
+                        <div class="icon">🎓</div>
+                        <div>
+                            <h4>Qualified Teachers</h4>
+                            <p>Highly trained educators using modern, animated, student-centered pedagogies to spark
+                                curiosity.</p>
+                        </div>
+                    </div>
+                    <div class="feature">
+                        <div class="icon">♿</div>
+                        <div>
+                            <h4>Inclusive Campus</h4>
+                            <p>Ramps, support services, and tailored accommodations for students with disabilities.
+                                Everyone
+                                belongs. ❤️</p>
+                        </div>
+                    </div>
+                    <div class="feature">
+                        <div class="icon">🧪</div>
+                        <div>
+                            <h4>Science & Computer Labs</h4>
+                            <p>Fully equipped labs for hands-on experiments and digital learning.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-card fade-in" style="animation-delay:.3s;">
+                <h4>Why Choose Us <img src="whychoseius.jpeg" alt="Why choose us" class="inline-icon" /></h4>
+                <p>We believe in empowering minds for a fearless future. Our students receive personalized support,
+                    state-of-the-art facilities, and real opportunities through targeted scholarships, discounts,
+                    and
+                    recognition. ✨</p>
+                <div class="grid-three">
+                    <div class="icon-box">
+                        <div class="placeholder-img" style="height:60px;width:60px;">Icon</div>
+                        <div>Experienced Staff</div>
+                    </div>
+                    <div class="icon-box">
+                        <div class="placeholder-img" style="height:60px;width:60px;">Icon</div>
+                        <div>Modern Facilities</div>
+                    </div>
+                    <div class="icon-box">
+                        <div class="placeholder-img" style="height:60px;width:60px;">Icon</div>
+                        <div>Safe Environment</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- School Icons / Highlights -->
+    <section id="highlights" style="margin-top:3rem;">
+        <div class="section-title">
+            <div>
+                <h3>Why We're Different 🌟 <img src="whywearedifferent.jpeg" alt="Different" class="inline-icon" />
+                </h3><span class="badge">Top Tier</span>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="card fade-in" style="animation-delay:.2s;">
+                <div class="placeholder-img">Comuter Lab Image</div>
+                <h4>Comuter Lab <img src="comuterlab.jpeg" alt="Computer lab" class="inline-icon" /></h4>
+                <p>Hands-on experiments with guidance from science mentors.</p>
+            </div>
+            <div class="card fade-in" style="animation-delay:.3s;">
+                <div class="placeholder-img">Library Image</div>
+                <h4>Library <img src="library.jpeg" alt="Library" class="inline-icon" /></h4>
+                <p>Quiet zones, digital access, and curated resources from early grades to seniors.</p>
+            </div>
+            <div class="card fade-in" style="animation-delay:.4s;">
+                <div class="placeholder-img">Kindergarten Playyards</div>
+                <h4>Kindergarten Playyards <img src="kindergarden.png" alt="Playyards" class="inline-icon" /></h4>
+                <p>Safe, colorful, and engaging outdoor areas for early learners.</p>
+            </div>
+        </div>
+    </section>
 
     <!-- Scholarship / Discount Form -->
     <section id="scholarships" style="margin-top:3rem;">
         <div class="section-title">
             <div>
-                <h3>Scholarships & Discounts 💛 <img src="discoubnttt.png" alt="Discounts" class="inline-icon" /></h3>
-                <span class="badge">Inclusive Support</span>
+                <h3>Scholarships & Discounts 💛 <img src="discoubnttt.png" alt="Discounts" class="inline-icon" />
+                </h3><span class="badge">Inclusive Support</span>
             </div>
         </div>
         <div class="card" style="padding:2rem;">
@@ -592,15 +730,117 @@
                 <div class="flex-gap">
                     <div style="flex:1;">
                         <label for="email">Email*</label>
-                        <input required type="email" id="email" name="email" placeholder="example@mail.com" />
+                        <input required type="email" id="email" name="email"
+                            placeholder="email@example.com" />
                     </div>
                     <div style="flex:1;">
                         <label for="phone">Phone Number*</label>
-                        <input required type="tel" id="phone" name="phone" placeholder="999999" />
+                        <input required type="tel" id="phone" name="phone" placeholder="0000000000" />
                     </div>
                 </div>
-                <!-- rest of form unchanged -->
+                <div>
+                    <label for="specialStatus">Special Status (Check all that apply)</label>
+                    <div style="display:flex;gap:1rem;flex-wrap:wrap;">
+                        <label><input type="checkbox" name="status" value="first_position" /> First Position
+                            Student</label>
+                        <label><input type="checkbox" name="status" value="recent_achiever" /> Recent
+                            Achiever</label>
+                        <label><input type="checkbox" name="status" value="disability" /> Disability</label>
+                        <label><input type="checkbox" name="status" value="financial_need" /> Financial Need</label>
+                    </div>
+                </div>
+                <div>
+                    <label for="statement">Short Statement of Need / Achievement</label>
+                    <textarea id="statement" name="statement" rows="4"
+                        placeholder="Explain your situation or achievement"></textarea>
+                </div>
+                <div>
+                    <label for="supporting">Upload Supporting Documents (optional)</label>
+                    <input type="file" id="supporting" name="supporting" />
+                </div>
+                <div style="display:flex;gap:1rem;flex-wrap:wrap;align-items:center;">
+                    <div style="flex:1;">
+                        <label for="agree">I confirm the information is accurate*</label><br />
+                        <input required type="checkbox" id="agree" /> I agree
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-primary">Submit Application</button>
+                    </div>
+                </div>
+                <p class="small">Eligible candidates: first-position students, recent high achievers, students with
+                    disabilities, and those facing financial hardship. Our team will review and contact you within 7
+                    business days. 😊</p>
             </form>
+        </div>
+    </section>
+
+    <!-- Facilities Summary -->
+    <section id="facilities" style="margin-top:3rem;">
+        <div class="section-title">
+            <div>
+                <h3>Our Facilities 🏗️ <img src="ourfacillites.jpeg" alt="Facilities" class="inline-icon" /></h3>
+                <span class="badge">Full Campus</span>
+            </div>
+        </div>
+        <div class="features">
+            <div class="feature">
+                <div class="icon">🧒</div>
+                <div>
+                    <h4>Classrooms K-12 <img src="classroom.jpeg" alt="Classroom" class="inline-icon" /></h4>
+                    <p>Bright, air-conditioned, and tech-enabled learning spaces.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="icon">🔬</div>
+                <div>
+                    <h4>Science Lab <img src="sciencelab.jpeg" alt="Science lab" class="inline-icon" /></h4>
+                    <p>Modern labs with safety systems and equipment for experiments.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="icon">💻</div>
+                <div>
+                    <h4>Computer Lab <img src="comuterlab.jpeg" alt="Computer lab" class="inline-icon" /></h4>
+                    <p>Digital literacy center with supervised access.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="icon">📚</div>
+                <div>
+                    <h4>Library <img src="library.jpeg" alt="Library" class="inline-icon" /></h4>
+                    <p>Physical and digital books with reading zones.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="icon">🍽️</div>
+                <div>
+                    <h4>Cafeteria <img src="cafeteria.jpeg" alt="Cafeteria" class="inline-icon" /></h4>
+                    <p>Healthy meals with dietary options.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="icon">🎠</div>
+                <div>
+                    <h4>Playgrounds <img src="laygrounds.jpeg" alt="Playgrounds" class="inline-icon" /></h4>
+                    <p>Separate early childhood and upper-grade areas.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery for arbitrary images -->
+    <section id="gallery" style="margin-top:3rem;">
+        <div class="section-title">
+            <div>
+                <h3>Gallery 📸 <img src="insideclass.png" alt="Gallery" class="inline-icon" /></h3><span
+                    class="badge">Moments &
+                    Highlights</span>
+            </div>
+        </div>
+        <div class="image-gallery" aria-label="Flexible image grid">
+            <img src="overall look.png" alt="Overall campus view" class="clickable" />
+            <img src="insideschool.png" alt="Inside school classroom" class="clickable" />
+            <img src="schhoooooooool.png" alt="School exterior" class="clickable" />
         </div>
     </section>
 
@@ -608,16 +848,16 @@
     <section id="contact" class="contact">
         <div class="section-title">
             <div>
-                <h3>Contact Us 📞 <img src="contactus.png" alt="Contact" class="inline-icon" /></h3>
-                <span class="badge">Get In Touch</span>
+                <h3>Contact Us 📞 <img src="contactus.png" alt="Contact" class="inline-icon" /></h3><span
+                    class="badge">Get In Touch</span>
             </div>
         </div>
         <div class="split">
             <div>
                 <p>Have questions or need help with admission or scholarship application? Reach out to us:</p>
-                <p><strong>Phone:</strong> 999999 | 999999</p>
-                <p><strong>Email:</strong> example@mail.com</p>
-                <p><strong>Address:</strong> FOTS</p>
+                <p><strong>Phone:</strong> 0000000000 | 0000000000</p>
+                <p><strong>Email:</strong> email@example.com</p>
+                <p><strong>Address:</strong> Your City / Street</p>
                 <div class="social">
                     <div class="pill-small">Facebook</div>
                     <div class="pill-small">Instagram</div>
@@ -637,22 +877,8 @@
                             <input required type="email" id="cemail" placeholder="you@example.com" />
                         </div>
                         <div>
-                            <label for="msg">Message</label>
-                            <textarea required id="msg" rows="3" placeholder="How can we help?"></textarea>
-                        </div>
-                        <div><button class="btn btn-primary" type="submit">Send</button></div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+                           
 
-    <footer class="footer">
-        <div>&copy; 2025 Catherine the Great Academy. All rights reserved. 🌍✨</div>
-        <div>Designed with care. Empowered Minds, Fearless Future. 🚀</div>
-        <div>Contact: example@mail.com | 999999, 999999</div>
-    </footer>
-</div>
 
     <script>
         // Smooth scroll for anchor links
@@ -734,3 +960,4 @@
 
 
 </html>
+
