--- a/index.html
+++ b/index.html
@@ -877,7 +877,12 @@
                             <input required type="email" id="cemail" placeholder="you@example.com" />
                         </div>
                         <div>
-                           
+                           <footer class="footer">
+    <div>&copy; 2025 Catherine the Great Academy. All rights reserved. 🌍✨</div>
+    <div>Designed with care. Empowered Minds, Fearless Future. 🚀</div>
+    <div>Contact: catherine.academy.gmail.comm | 0780170780, 0785774757</div>
+</footer>
+
 
 
     <script>
@@ -960,4 +965,5 @@
 
 
 </html>
+
 
