--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
             <a class="btn btn-outline" href="#contact">Contact</a>
         </nav>
     </header>
+
     <!-- Hero / Back to school -->
     <section id="hero" class="hero" aria-label="Back to school hero">
         <div class="hero-text fade-in" style="animation-delay:.1s;">
@@ -572,8 +573,8 @@
     <section id="online-courses" style="margin-top:3rem;">
         <div class="section-title">
             <div>
-                <h3>Our Online Courses 🌐 <img src="onlinecourse.jpeg" alt="Online learning" class="inline-icon" />
-                </h3><span class="badge">Learn Anywhere</span>
+                <h3>Our Online Courses 🌐 <img src="onlinecourse.jpeg" alt="Online learning" class="inline-icon" /></h3>
+                <span class="badge">Learn Anywhere</span>
             </div>
         </div>
         <div class="cards">
@@ -595,8 +596,7 @@
                 <div class="placeholder-img">Replace with online course image</div>
                 <h4>Digital Literacy <img src="digital.jpeg" alt="Digital literacy" class="inline-icon" /></h4>
                 <p>From basic computer skills to web design and responsible online citizenship. 🌍🖥️</p>
-                <div><span class="pill-small">Project-based</span> <span class="pill-small">Future-ready</span>
-                </div>
+                <div><span class="pill-small">Project-based</span> <span class="pill-small">Future-ready</span></div>
             </div>
         </div>
     </section>
@@ -627,8 +627,7 @@
                         <div class="icon">♿</div>
                         <div>
                             <h4>Inclusive Campus</h4>
-                            <p>Ramps, support services, and tailored accommodations for students with disabilities.
-                                Everyone
+                            <p>Ramps, support services, and tailored accommodations for students with disabilities. Everyone
                                 belongs. ❤️</p>
                         </div>
                     </div>
@@ -645,8 +644,7 @@
                 <h4>Why Choose Us <img src="whychoseius.jpeg" alt="Why choose us" class="inline-icon" /></h4>
                 <p>We believe in empowering minds for a fearless future. Our students receive personalized support,
                     state-of-the-art facilities, and real opportunities through targeted scholarships, discounts,
-                    and
-                    recognition. ✨</p>
+                    and recognition. ✨</p>
                 <div class="grid-three">
                     <div class="icon-box">
                         <div class="placeholder-img" style="height:60px;width:60px;">Icon</div>
@@ -669,14 +667,14 @@
     <section id="highlights" style="margin-top:3rem;">
         <div class="section-title">
             <div>
-                <h3>Why We're Different 🌟 <img src="whywearedifferent.jpeg" alt="Different" class="inline-icon" />
-                </h3><span class="badge">Top Tier</span>
+                <h3>Why We're Different 🌟 <img src="whywearedifferent.jpeg" alt="Different" class="inline-icon" /></h3><span
+                        class="badge">Top Tier</span>
             </div>
         </div>
         <div class="cards">
             <div class="card fade-in" style="animation-delay:.2s;">
-                <div class="placeholder-img">Comuter Lab Image</div>
-                <h4>Comuter Lab <img src="comuterlab.jpeg" alt="Computer lab" class="inline-icon" /></h4>
+                <div class="placeholder-img">Computer Lab Image</div>
+                <h4>Computer Lab <img src="comuterlab.jpeg" alt="Computer lab" class="inline-icon" /></h4>
                 <p>Hands-on experiments with guidance from science mentors.</p>
             </div>
             <div class="card fade-in" style="animation-delay:.3s;">
@@ -692,149 +690,12 @@
         </div>
     </section>
 
-    <!-- Scholarship / Discount Form -->
-    <section id="scholarships" style="margin-top:3rem;">
-        <div class="section-title">
-            <div>
-                <h3>Scholarships & Discounts 💛 <img src="discoubnttt.png" alt="Discounts" class="inline-icon" />
-                </h3><span class="badge">Inclusive Support</span>
-            </div>
-        </div>
-        <div class="card" style="padding:2rem;">
-            <form id="scholarship-form" class="form" aria-label="Scholarship application form">
-                <div class="flex-gap">
-                    <div style="flex:1;">
-                        <label for="fullName">Full Name*</label>
-                        <input required type="text" id="fullName" name="fullName" placeholder="Student full name" />
-                    </div>
-                    <div style="flex:1;">
-                        <label for="grade">Grade Applying For*</label>
-                        <select required id="grade" name="grade">
-                            <option value="">Select Grade</option>
-                            <option>Kindergarten</option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="flex-gap">
-                    <div style="flex:1;">
-                        <label for="email">Email*</label>
-                        <input required type="email" id="email" name="email"
-                            placeholder="email@example.com" />
-                    </div>
-                    <div style="flex:1;">
-                        <label for="phone">Phone Number*</label>
-                        <input required type="tel" id="phone" name="phone" placeholder="0000000000" />
-                    </div>
-                </div>
-                <div>
-                    <label for="specialStatus">Special Status (Check all that apply)</label>
-                    <div style="display:flex;gap:1rem;flex-wrap:wrap;">
-                        <label><input type="checkbox" name="status" value="first_position" /> First Position
-                            Student</label>
-                        <label><input type="checkbox" name="status" value="recent_achiever" /> Recent
-                            Achiever</label>
-                        <label><input type="checkbox" name="status" value="disability" /> Disability</label>
-                        <label><input type="checkbox" name="status" value="financial_need" /> Financial Need</label>
-                    </div>
-                </div>
-                <div>
-                    <label for="statement">Short Statement of Need / Achievement</label>
-                    <textarea id="statement" name="statement" rows="4"
-                        placeholder="Explain your situation or achievement"></textarea>
-                </div>
-                <div>
-                    <label for="supporting">Upload Supporting Documents (optional)</label>
-                    <input type="file" id="supporting" name="supporting" />
-                </div>
-                <div style="display:flex;gap:1rem;flex-wrap:wrap;align-items:center;">
-                    <div style="flex:1;">
-                        <label for="agree">I confirm the information is accurate*</label><br />
-                        <input required type="checkbox" id="agree" /> I agree
-                    </div>
-                    <div>
-                        <button type="submit" class="btn btn-primary">Submit Application</button>
-                    </div>
-                </div>
-                <p class="small">Eligible candidates: first-position students, recent high achievers, students with
-                    disabilities, and those facing financial hardship. Our team will review and contact you within 7
-                    business days. 😊</p>
-            </form>
-        </div>
-    </section>
-
-    <!-- Facilities Summary -->
-    <section id="facilities" style="margin-top:3rem;">
-        <div class="section-title">
-            <div>
-                <h3>Our Facilities 🏗️ <img src="ourfacillites.jpeg" alt="Facilities" class="inline-icon" /></h3>
-                <span class="badge">Full Campus</span>
-            </div>
-        </div>
-        <div class="features">
-            <div class="feature">
-                <div class="icon">🧒</div>
-                <div>
-                    <h4>Classrooms K-12 <img src="classroom.jpeg" alt="Classroom" class="inline-icon" /></h4>
-                    <p>Bright, air-conditioned, and tech-enabled learning spaces.</p>
-                </div>
-            </div>
-            <div class="feature">
-                <div class="icon">🔬</div>
-                <div>
-                    <h4>Science Lab <img src="sciencelab.jpeg" alt="Science lab" class="inline-icon" /></h4>
-                    <p>Modern labs with safety systems and equipment for experiments.</p>
-                </div>
-            </div>
-            <div class="feature">
-                <div class="icon">💻</div>
-                <div>
-                    <h4>Computer Lab <img src="comuterlab.jpeg" alt="Computer lab" class="inline-icon" /></h4>
-                    <p>Digital literacy center with supervised access.</p>
-                </div>
-            </div>
-            <div class="feature">
-                <div class="icon">📚</div>
-                <div>
-                    <h4>Library <img src="library.jpeg" alt="Library" class="inline-icon" /></h4>
-                    <p>Physical and digital books with reading zones.</p>
-                </div>
-            </div>
-            <div class="feature">
-                <div class="icon">🍽️</div>
-                <div>
-                    <h4>Cafeteria <img src="cafeteria.jpeg" alt="Cafeteria" class="inline-icon" /></h4>
-                    <p>Healthy meals with dietary options.</p>
-                </div>
-            </div>
-            <div class="feature">
-                <div class="icon">🎠</div>
-                <div>
-                    <h4>Playgrounds <img src="laygrounds.jpeg" alt="Playgrounds" class="inline-icon" /></h4>
-                    <p>Separate early childhood and upper-grade areas.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Gallery for arbitrary images -->
     <section id="gallery" style="margin-top:3rem;">
         <div class="section-title">
             <div>
                 <h3>Gallery 📸 <img src="insideclass.png" alt="Gallery" class="inline-icon" /></h3><span
-                    class="badge">Moments &
-                    Highlights</span>
+                        class="badge">Moments & Highlights</span>
             </div>
         </div>
         <div class="image-gallery" aria-label="Flexible image grid">
@@ -849,15 +710,15 @@
         <div class="section-title">
             <div>
                 <h3>Contact Us 📞 <img src="contactus.png" alt="Contact" class="inline-icon" /></h3><span
-                    class="badge">Get In Touch</span>
+                        class="badge">Get In Touch</span>
             </div>
         </div>
         <div class="split">
             <div>
                 <p>Have questions or need help with admission or scholarship application? Reach out to us:</p>
-                <p><strong>Phone:</strong> 0000000000 | 0000000000</p>
-                <p><strong>Email:</strong> email@example.com</p>
-                <p><strong>Address:</strong> Your City / Street</p>
+                <p><strong>Phone:</strong> 0780170780 | 0785774757</p>
+                <p><strong>Email:</strong> catherine.academy@gmail.com</p>
+                <p><strong>Address:</strong> Saleem Karwan</p>
                 <div class="social">
                     <div class="pill-small">Facebook</div>
                     <div class="pill-small">Instagram</div>
@@ -877,11 +738,22 @@
                             <input required type="email" id="cemail" placeholder="you@example.com" />
                         </div>
                         <div>
-                           <footer class="footer">
-    <div>&copy; 2025 Catherine the Great Academy. All rights reserved. 🌍✨</div>
-    <div>Designed with care. Empowered Minds, Fearless Future. 🚀</div>
-    <div>Contact: catherine.academy.gmail.comm | 0780170780, 0785774757</div>
-</footer>
+                            <label for="msg">Message</label>
+                            <textarea required id="msg" rows="3" placeholder="How can we help?"></textarea>
+                        </div>
+                        <div><button class="btn btn-primary" type="submit">Send</button></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div>&copy; 2025 Catherine the Great Academy. All rights reserved. 🌍✨</div>
+        <div>Designed with care. Empowered Minds, Fearless Future. 🚀</div>
+        <div>Contact: catherine.academy@gmail.com | 0780170780, 0785774757</div>
+    </footer>
+</div>
 
 
 
@@ -965,5 +837,6 @@
 
 
 </html>
+
 
 
