--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <section id="online-courses" style="margin-top:3rem;">
         <div class="section-title">
             <div>
-                <h3>Our Online Courses 🌐 <img src="onlinecourse.jpeg" alt="Online learning" class="inline-icon" /></h3>
+                <h3>Our Online Courses 🌐 <img src="onlinecourse." alt="Online learning" class="inline-icon" /></h3>
                 <span class="badge">Learn Anywhere</span>
             </div>
         </div>
@@ -605,7 +605,7 @@
     <section id="admissions" style="margin-top:3rem;">
         <div class="section-title">
             <div>
-                <h3>Admissions Are Open 🏫 <img src="Blue and White Modern School Admissions Poster.png"
+                <h3>Admissions Are Open 🏫 <img src="ngbglur"
                         alt="Admissions" class="inline-icon" /></h3><span class="badge">Apply Now</span>
             </div>
         </div>
@@ -641,7 +641,7 @@
                 </div>
             </div>
             <div class="bg-card fade-in" style="animation-delay:.3s;">
-                <h4>Why Choose Us <img src="whychoseius.jpeg" alt="Why choose us" class="inline-icon" /></h4>
+                <h4>Why Choose Us <img src="whyoseius.jpeg" alt="Why choose us" class="inline-icon" /></h4>
                 <p>We believe in empowering minds for a fearless future. Our students receive personalized support,
                     state-of-the-art facilities, and real opportunities through targeted scholarships, discounts,
                     and recognition. ✨</p>
@@ -709,16 +709,16 @@
     <section id="contact" class="contact">
         <div class="section-title">
             <div>
-                <h3>Contact Us 📞 <img src="contactus.png" alt="Contact" class="inline-icon" /></h3><span
+                <h3>Contact Us 📞 <img src="contact" alt="Contact" class="inline-icon" /></h3><span
                         class="badge">Get In Touch</span>
             </div>
         </div>
         <div class="split">
             <div>
                 <p>Have questions or need help with admission or scholarship application? Reach out to us:</p>
-                <p><strong>Phone:</strong> 0780170780 | 0785774757</p>
+                <p><strong>Phone:</strong> .....</p>
                 <p><strong>Email:</strong> catherine.academy@gmail.com</p>
-                <p><strong>Address:</strong> Saleem Karwan</p>
+                <p><strong>Address:</strong> ......</p>
                 <div class="social">
                     <div class="pill-small">Facebook</div>
                     <div class="pill-small">Instagram</div>
@@ -751,7 +751,7 @@
     <footer class="footer">
         <div>&copy; 2025 Catherine the Great Academy. All rights reserved. 🌍✨</div>
         <div>Designed with care. Empowered Minds, Fearless Future. 🚀</div>
-        <div>Contact: catherine.academy@gmail.com | 0780170780, 0785774757</div>
+        <div>Contact: catherine.academy@gmail.com |</div>
     </footer>
 </div>
 
@@ -837,6 +837,7 @@
 
 
 </html>
+
 
 
 
