--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         <div class="hero-text fade-in" style="animation-delay:.1s;">
             <div class="pill">Back to School 2025 🎒✏️ <img src="Yellow Sketch Back To School Facebook Cover.png"
                     alt="Back to school icon" class="inline-icon" /></div>
-            <h2>Welcome to <span class="highlighted">Catherine the Great Academy</span> <img src="cad.jpeg"
+            <h2>Welcome to <span class="highlighted">Catherine the Great Academy</span> <img src="cad.peg"
                     alt="Academy emblem" class="inline-icon" /></h2>
             <p>From Kindergarten to Grade 12: High-quality education, inclusive scholarships, and modern facilities.
                 First-position students, recent achievers, and those with disabilities or financial challenges
@@ -837,6 +837,7 @@
 
 
 </html>
+
 
 
 
