--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             <p>From Kindergarten to Grade 12: High-quality education, inclusive scholarships, and modern facilities.
                 First-position students, recent achievers, and those with disabilities or financial challenges
                 receive special discounts and support. Apply now via our easy scholarship form below. 💡📚 <img
-                    src="scholar.jpeg" alt="Scholarship badge" class="inline-icon" /></p>
+                    src="scholbhtghnnar.jpeg" alt="Scholarship badge" class="inline-icon" /></p>
             <div style="margin-top:1rem;display:flex;gap:12px;flex-wrap:wrap;">
                 <a href="#admissions" class="btn btn-primary">Admissions Open 🎓</a>
                 <a href="#scholarships" class="btn btn-outline">Apply for Scholarship 📝</a>
@@ -837,6 +837,7 @@
 
 
 </html>
+
 
 
 
